Modifications cfg